tests/NormalTests/paczka1/small_fuzzy/58617300.err
Error in line 1: hVUf S710 20,1
Error in line 5: ADOJxi77ch S710 72,6
Error in line 12: hVUf S710 21,5
